Changelog
=========

1.2 - 2010-XX-XX
----------------

* Include both .min.js and .js versions of js resources to make life
  a little easier for folks who want to read the source. The .min.js
  versions will go into the browser resources.
  [smcmahon]

* Updated documentation so it reflect changes.
  [garbas]

* Updated jquerytools to 1.2.5. dateinput, rangeinput and validator
  plugins added as additional browser resources. Now all plugins from
  jquerytools are added with this package.
  [garbas]

* Added build script which builds js files from source (from github).
  [garbas]

* getContent does not exist in jqtools. It has been replaced by
  getOverlay. http://flowplayer.org/tools/forum/40/28687
  [naro]

1.1.2 - 2010-07-19
------------------

* Avoid use of genericsetup:upgradeSteps (plural), which doesn't work in Plone
  3.
  [davisagli]

1.1.1 - 2010-07-19
------------------

* Add 'description' parameter to upgrade step directives to fix breakage on
  Plone 3.
  [davisagli]

1.1 - 2010-07-18
----------------

* Add overlays.css. For Plone 3 only (it is disabled on installation in Plone
  4, and on upgrade from Plone 3 to Plone 4).
  [davisagli]

* Update license to GPL version 2 only.
  [hannosch]

* Added experimental windmill browser integration tests.
  [smcmahon]

1.1b5 - 2010-06-12
------------------

* Update to jQuery Tools 1.2.3.
  [smcmahon]

* Recode to one "var" per function standard.
  [smcmahon]

* Don't show empty ajax form responses, even if "noform" is not set.
  [smcmahon]

1.1b4 - 2010-06-06
------------------

* The select technique used to filter ajax response in b1-b3 was not robust
  if the responseText was not well-formed (think ZMI forms). Fixed by emulating
  the technique used in jQuery's .load method.
  [smcmahon]

1.1b3 - 2010-06-03
------------------

* Switch back to "find", undoing 1.1b2 change. 'filter' does not find
  descendents, and will thus not work in most validation error situations.